# GlobalBiz

./: .env.example  .gitignore  README.md  globalbiz.db-shm  globalbiz.db-wal  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
backend/: mail_manager.py
backend/ai/: content_gen.py
backend/calculators/: shipping.py  tariff.py  tariff_v2.py
backend/db/: database.py  models.py
backend/exporters/: ebay_csv.py  shopee_csv.py
backend/logistics/: elogicom.py  fedex.py  seapass.py
backend/marketplaces/: ebay.py  shopee.py
backend/scheduler/: monitor.py
backend/scrapers/: amazon.py  amazon.py.bak  rakuten.py  yahoo.py
backend/translators/: translate.py
frontend/: app.py  mail_page.py
frontend/data/: tariff_master.json
scripts/: migrate_db.py
