[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "globalbiz"
version = "0.1.0"
description = "越境EC運営ツール - Amazon/楽天/Yahoo/NETSEAから仕入れ、eBay/Shopeeへ販売"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "sqlalchemy>=2.0.0",
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "lxml>=5.2.0",
    "httpx>=0.27.0",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
